<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.fragments.hourly.HourlyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/lTopLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:textSize="16sp"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:textStyle="bold|italic"
                android:padding="4dp"
                android:text="@string/tv_city"
                />

            <TextView
                android:id="@+id/tvDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:typeface="serif"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:padding="4dp"
                android:textStyle="italic"
                android:text="@string/tv_date" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/ivTemp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    tools:srcCompat="@tools:sample/avatars"
                    />
                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:textColor="@color/common_google_signin_btn_text_light_default"
                    android:padding="6dp"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:text="@string/tv_temp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/tvCond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:textStyle="italic"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:padding="4dp"
                android:text="@string/tv_condition" />

            <TextView
                android:id="@+id/tvTempMinMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:typeface="serif"
                android:padding="4dp"
                android:text="@string/tv_temp_min_max" />

            <TextView
                android:id="@+id/tvFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:padding="4dp"
                android:textStyle="italic"
                android:text="@string/tv_feels_like"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHourly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/lTopLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>